# advent_of_code

./: .gitignore  README.md
2016/: day1.rb
2016/day1/: day1.rb
2016/day10/: .irbrc  .rvmrc  README.markdown
2016/day10/lib/: day10.rb
2016/day10/lib/day10/: lib.rb
2016/day10/spec/: day10_spec.rb  spec_helper.rb
2016/day11/: .irbrc  .rvmrc  README.markdown
2016/day11/lib/: day11.rb
2016/day11/lib/day11/: lib.rb
2016/day11/spec/: day11_spec.rb  spec_helper.rb
2016/day12/: .irbrc  .rvmrc  README.markdown
2016/day12/lib/: day12.rb
2016/day12/lib/day12/: lib.rb
2016/day12/spec/: day12_spec.rb  spec_helper.rb
2016/day13/: README.md  day13.cabal
2016/day13/app/: Main.hs
2016/day13/src/: Lib.hs
2016/day13/test/: Spec.hs
2016/day14/: README.md  day14.cabal  stack.yaml
2016/day14/app/: Main.hs
2016/day14/src/: Lib.hs
2016/day15/: README.md  day15.cabal
2016/day15/app/: Main.hs
2016/day15/src/: Lib.hs
2016/day16/: README.md  day16.cabal
2016/day16/app/: Main.hs
2016/day16/src/: Lib.hs
2016/day17/: README.md  day17.cabal
2016/day17/app/: Main.hs
2016/day17/src/: Lib.hs
2016/day18/: LICENSE  README.md  day18.cabal  stack.yaml
2016/day18/app/: Main.hs
2016/day18/src/: Lib18.hs
2016/day19/: LICENSE  README.md  day19.cabal
2016/day19/app/: Main.hs
2016/day19/src/: Lib.hs
2016/day19/test/: Spec.hs
2016/day2/: day2-1.rb  day2-2.rb
2016/day20/: CHANGELOG.md  LICENSE.md  README.md  package.yaml
2016/day20/executable/: Main.hs
2016/day3/: day3-1.rb  day3-2.rb  day3.rb
2016/day4/: .irbrc  .rvmrc  README.markdown
2016/day4/lib/: day4.rb
2016/day4/lib/day4/: day4_parser.rb
2016/day4/spec/: day4_spec.rb  spec_helper.rb
2016/day5/: .rvmrc  Gemfile  README.markdown
2016/day5/lib/: day5.rb
2016/day5/lib/day5/: library.rb
2016/day5/spec/: day5_spec.rb  spec_helper.rb
2016/day6/: .irbrc  README.markdown
2016/day6/lib/: day6.rb
2016/day6/lib/day6/: library.rb
2016/day6/spec/: day6_spec.rb  spec_helper.rb
2016/day7/: .irbrc  .rvmrc  README.markdown
2016/day7/lib/: day7.rb
2016/day7/lib/day7/: lib.rb
2016/day7/spec/: day7_spec.rb  spec_helper.rb
2016/day8/: .irbrc  .rvmrc  README.markdown
2016/day8/lib/: day8.rb
2016/day8/lib/day8/: lib.rb
2016/day8/spec/: day8_spec.rb  spec_helper.rb
2016/day9/: .irbrc  .rvmrc  README.markdown
2016/day9/lib/: day9.rb
2016/day9/lib/day9/: lib.rb
2016/day9/spec/: day9_spec.rb  spec_helper.rb
2017/clj/: README.md  project.clj
2017/clj/resources/: day23graph.txt
2017/clj/src/clj/: core.clj  day1.clj  (+14 more)
2018/clj/: README.md  project.clj
2020/day1/: Cargo.toml
2020/day1/src/: main.rs
2020/day10/: Cargo.toml
2020/day10/src/: main.rs
2020/day2/: Cargo.toml
2020/day2/src/: main.rs
2020/day3/: Cargo.toml
2020/day3/src/: main.rs
2020/day4/: Cargo.toml
2020/day4/src/: main.rs
2020/day5/: Cargo.toml
2020/day5/src/: main.rs
2020/day6/: Cargo.toml
2020/day6/src/: main.rs
2020/day7/: Cargo.toml
2020/day7/src/: main.rs
2020/day8/: Cargo.toml
2020/day8/src/: main.rs
2020/day9/: Cargo.toml
2020/day9/src/: main.rs
2021/haskell/: aoc2021.cabal  stack.yaml
2021/haskell/app/: Main.hs
2021/haskell/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  DayXX.hs
2021/haskell/test/: Spec.hs
2022/haskell/: aoc2022.cabal
2022/haskell/app/: Main.hs
2022/haskell/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs
2022/haskell/test/: Spec.hs
(+14 files in other folders)
