name:                day14
version:             0.1.0.0
synopsis:            Initial project template from stack, using test-framework with QuickCheck
description:         Please see README.md
homepage:            https://github.com/maredv/advent_of_code/2016/day14#readme
license:             BSD3
license-file:        LICENSE
author:              Marcus Edvinsson
maintainer:          edvinsson@gmail.com
copyright:           Copyright: (c) 2016 Marcus Edvinsson
category:            Haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , pureMD5
                     , bytestring
                     , memoize
  default-language:    Haskell2010

executable day14-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , day14
  default-language:    Haskell2010

test-suite day14-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , day14
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maredv/advent_of_code/2016/day14
