name:                aoc2021
version:             0.1.0.0
synopsis:            My Advent of Code solutions for 2021
description:         Please see README.md
homepage:            https://github.com/maredv/advent_of_code/2021/
license:             BSD3
license-file:        LICENSE
author:              Marcus Edvinsson
maintainer:          edvinsson@gmail.com
copyright:           Copyright: (c) 2021 Marcus Edvinsson
category:            Haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day01
                     , Day02
                     , Day03
                     , Day04
                     , Day05
                     , Day06
                     , Day07
                     , Day08
                     , Day09
                     , Day10
                     , Day11
  build-depends:       base >= 4.7 && < 5
                     , pureMD5
                     , bytestring
                     , memoize
                     , split
                     , containers
                     , matrix
  default-language:    Haskell2010

executable aoc2021-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aoc2021
  default-language:    Haskell2010

test-suite aoc2021-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maredv/advent_of_code/2021
